load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    "cpp_ros2_interface_library",
    "py_ros2_interface_library",
    "ros2_interface_library",
)
load("@com_github_mvukov_rules_ros2//ros2:rust_interfaces.bzl", "rust_ros2_interface_library")

package(default_visibility = ["//visibility:public"])

ros2_interface_library(
    name = "control_msgs",
    srcs = glob([
        "control_msgs/msg/*.msg",
        "control_msgs/srv/*.srv",
        "control_msgs/action/*.action",
    ]),
    deps = [
        "@ros2_common_interfaces//:geometry_msgs",
        "@ros2_common_interfaces//:sensor_msgs",
        "@ros2_common_interfaces//:std_msgs",
        "@ros2_common_interfaces//:trajectory_msgs",
        "@ros2_rcl_interfaces//:action_msgs",
    ],
)

cpp_ros2_interface_library(
    name = "cpp_control_msgs",
    deps = [":control_msgs"],
)

py_ros2_interface_library(
    name = "py_control_msgs",
    deps = [":control_msgs"],
)

rust_ros2_interface_library(
    name = "rust_control_msgs",
    deps = [":control_msgs"],
)
